--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -23,6 +23,8 @@ jobs:
 
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
+      with:
+        arguments: --stacktrace :app:assembleDebug
       
-    - name: Build with Gradle
-      run: ./gradlew build
+#     - name: Build with Gradle
+#       run: ./gradlew build
