--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -14,6 +14,27 @@ jobs:
     steps:
     - name: Checkout
     - uses: actions/checkout@v3
+	
+	- name: Ruby Setup
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: '2.6'
+    - uses: actions/cache@v1
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('.github/Gemfile') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+			  
+	- name: Danger Setup		  
+    - uses: MeilCli/danger-action@v5
+      with:
+        plugins_file: '.github/Gemfile'
+        install_path: 'vendor/bundle'
+        danger_file: '.github/Dangerfile'
+        danger_id: 'danger-pr'
+      env:
+        DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
     
     - name: set up JDK 11
     - uses: actions/setup-java@v3
@@ -25,6 +46,3 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: --stacktrace :app:assembleDebug
-      
-#     - name: Build with Gradle
-#       run: ./gradlew build
