--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout
     - uses: actions/checkout@v3
 	
-	- name: Ruby Setup
+	# - name: Ruby Setup
     - uses: actions/setup-ruby@v1
       with:
         ruby-version: '2.6'
