--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
     - name: Checkout
     - uses: actions/checkout@v3
-	
-	# - name: Ruby Setup
     - uses: actions/setup-ruby@v1
       with:
         ruby-version: '2.6'
@@ -36,13 +34,13 @@ jobs:
       env:
         DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
     
-    - name: set up JDK 11
-    - uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: --stacktrace :app:assembleDebug
+    # - name: set up JDK 11
+    # - uses: actions/setup-java@v3
+    #   with:
+    #     java-version: '11'
+    #     distribution: 'temurin'
+    #
+    # - name: Setup Gradle
+    #   uses: gradle/gradle-build-action@v2
+    #   with:
+    #     arguments: --stacktrace :app:assembleDebug
