--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -21,7 +21,8 @@ jobs:
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('.github/Gemfile') }}
-        restore-keys: ${{ runner.os }}-gems-
+        restore-keys: |
+		  ${{ runner.os }}-gems-
 			  
 	- name: Danger Setup		  
     - uses: MeilCli/danger-action@v5
