--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -17,12 +17,12 @@ jobs:
     - uses: actions/setup-ruby@v1
       with:
         ruby-version: '2.6'
-    - uses: actions/cache@v1
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('.github/Gemfile') }}
-		  #         restore-keys: |
-		  # ${{ runner.os }}-gems-
+    # - uses: actions/cache@v1
+    #   with:
+    #     path: vendor/bundle
+    #     key: ${{ runner.os }}-gems-${{ hashFiles('.github/Gemfile') }}
+    #     restore-keys: |
+    # 		  ${{ runner.os }}-gems-
 			  
 	- name: Danger Setup		  
     - uses: MeilCli/danger-action@v5
