--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -16,23 +16,34 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-ruby@v1
       with:
-        ruby-version: '2.6'
-    # - uses: actions/cache@v1
-    #   with:
-    #     path: vendor/bundle
-    #     key: ${{ runner.os }}-gems-${{ hashFiles('.github/Gemfile') }}
-    #     restore-keys: |
-    # 		  ${{ runner.os }}-gems-
-			  
-	- name: Danger Setup		  
-    - uses: MeilCli/danger-action@v5
+        ruby-version: '2.6.3'
+    - uses: actions/cache@v1
       with:
-        plugins_file: '.github/Gemfile'
-        install_path: 'vendor/bundle'
-        danger_file: '.github/Dangerfile'
-        danger_id: 'danger-pr'
-      env:
-        DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+        restore-keys: |
+    		  ${{ runner.os }}-gems-
+				  
+    - name: Run Danger
+  	# if: github.event_name  == 'pull_request'
+  	run: |
+    	# install danger and its dependencies using bundler
+    	gem install danger
+    	# execute danger for this PR
+    	bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
+  env:
+    # the token used by danger to report the results on the PR
+    DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}				  
+			  
+	# - name: Danger Setup
+	#     - uses: MeilCli/danger-action@v5
+	#       with:
+	#         plugins_file: '.github/Gemfile'
+	#         install_path: 'vendor/bundle'
+	#         danger_file: '.github/Dangerfile'
+	#         danger_id: 'danger-pr'
+	#       env:
+	#         DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
     
     # - name: set up JDK 11
     # - uses: actions/setup-java@v3
