--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -17,12 +17,13 @@ jobs:
     - uses: actions/setup-ruby@v1
       with:
         ruby-version: '2.6.3'
-    - uses: actions/cache@v1
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-        restore-keys: |
-    		  ${{ runner.os }}-gems-
+		bundler-cache: true
+    # - uses: actions/cache@v1
+    #   with:
+    #     path: vendor/bundle
+    #     key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+    #     restore-keys: |
+    # 		  ${{ runner.os }}-gems-
 				  
     - name: Run Danger
   	# if: github.event_name  == 'pull_request'
