--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -13,8 +13,10 @@ jobs:
 
     steps:
     - name: Checkout
-    - uses: actions/checkout@v3
-    - uses: actions/setup-ruby@v1
+      uses: actions/checkout@v3
+	  
+	- name: Setup Ruby  
+      uses: actions/setup-ruby@v1
       with:
         ruby-version: '2.6.3'
 		bundler-cache: true
@@ -22,19 +24,18 @@ jobs:
     #   with:
     #     path: vendor/bundle
     #     key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-    #     restore-keys: |
-    # 		  ${{ runner.os }}-gems-
+    #     restore-keys: ${{ runner.os }}-gems-
 				  
     - name: Run Danger
   	# if: github.event_name  == 'pull_request'
-  	run: |
-    	# install danger and its dependencies using bundler
-    	gem install danger
-    	# execute danger for this PR
-    	bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
-  env:
-    # the token used by danger to report the results on the PR
-    DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}				  
+  	  run: |
+        # install danger and its dependencies using bundler
+        gem install danger
+        # execute danger for this PR
+        bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
+  	  env:
+        # the token used by danger to report the results on the PR
+        DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}				  
 			  
 	# - name: Danger Setup
 	#     - uses: MeilCli/danger-action@v5
