--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -49,7 +49,9 @@ jobs:
         with:
          java-version: '11'
          distribution: 'temurin'
-  
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew  
+        
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
