--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -13,27 +13,38 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # - name: Setup Ruby
-        # uses: actions/setup-ruby@v1
-        # with:
-          # ruby-version: "2.6.3"
-          # bundler-cache: true
+      
+      - name: set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+         java-version: '11'
+         distribution: 'temurin'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew  
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+         arguments: --stacktrace :app:assembleDebug
+
+      - name: Setup Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: "2.6.3"
+          bundler-cache: true
       # - uses: actions/cache@v1
       #   with:
       #     path: vendor/bundle
       #     key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
       #     restore-keys: ${{ runner.os }}-gems-
 
-      # name: Run Danger
-      # # if: github.event_name  == 'pull_request'
-      # run: |
-      #   # install danger and its dependencies using bundler
-      #   gem install danger
-      #   # execute danger for this PR
-      #   bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
-      # env:
-      #   # the token used by danger to report the results on the PR
-      #   DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Danger
+        #if: github.event_name  == 'pull_request'
+        run: |
+          gem install danger
+          bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
 
       # - name: Danger Setup
       #     - uses: MeilCli/danger-action@v5
@@ -43,16 +54,4 @@ jobs:
       #         danger_file: '.github/Dangerfile'
       #         danger_id: 'danger-pr'
       #       env:
-      #         DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
-      - name: set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-         java-version: '11'
-         distribution: 'temurin'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew  
-        
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-         arguments: --stacktrace :app:assembleDebug
+      #         DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}         
