--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -30,8 +30,10 @@ jobs:
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: "2.6.3"
+          ruby-version: '3.0'
           bundler-cache: true
+      - run: bundle exec rake
+      
       # - uses: actions/cache@v1
       #   with:
       #     path: vendor/bundle
