--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -28,12 +28,12 @@ jobs:
          arguments: --stacktrace :app:assembleDebug
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          ruby-version: '2.6.3'
           bundler-cache: true
       - run: bundle exec rake
-      
+
       # - uses: actions/cache@v1
       #   with:
       #     path: vendor/bundle
