--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,3 +1,4 @@
+# Thanks to https://github.com/coil-kt/coil/blob/master/.github/workflows/ci.yml
 name: Android CI
 
 on:
@@ -30,7 +31,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.6.3'
+          ruby-version: '3.0'
           bundler-cache: true
 
       # - uses: actions/cache@v1
