--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -34,26 +34,10 @@ jobs:
           ruby-version: '3.0'
           bundler-cache: true
 
-      # - uses: actions/cache@v1
-      #   with:
-      #     path: vendor/bundle
-      #     key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-      #     restore-keys: ${{ runner.os }}-gems-
-
       - name: Run Danger
-        #if: github.event_name  == 'pull_request'
+        if: github.event_name  == 'pull_request'
         run: |
           gem install danger
           bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
-
-      # - name: Danger Setup
-      #     - uses: MeilCli/danger-action@v5
-      #       with:
-      #         plugins_file: '.github/Gemfile'
-      #         install_path: 'vendor/bundle'
-      #         danger_file: '.github/Dangerfile'
-      #         danger_id: 'danger-pr'
-      #       env:
-      #         DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}         
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}  
