--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -40,4 +40,4 @@ jobs:
           gem install danger
           bundle exec danger --dangerfile=Dangerfile --danger_id=danger-pr
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}  
+          DANGER_GITHUB_API_TOKEN: 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
